Implement responsive design

--- a/src/main/resources/static/dashboard/login.html
+++ b/src/main/resources/static/dashboard/login.html
@@ -1,115 +1,113 @@
-<div class="container">
-	<div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-		<div class="panel panel-info">
-			<div class="panel-heading">
-				<div class="panel-title">Sign In</div>
-				<div class="forgot-password"><a href="#">Forgot password?</a></div>
+<div class="mainbox col-md-6 col-md-offset-3 col-sm-12">
+	<div class="panel panel-info">
+		<div class="panel-heading">
+			<div class="panel-title">Sign In</div>
+			<div class="forgot-password"><a href="#">Forgot password?</a></div>
+		</div>
+		<div class="panel-body login-panel-body">
+			<div class="alert alert-danger col-sm-12" data-ng-show="lvm.hasLoginError">
+				<div class="alert alert-error">Invalid username and/or password.</div>
 			</div>
-			<div class="panel-body login-panel-body">
-				<div class="alert alert-danger col-sm-12" data-ng-show="lvm.hasLoginError">
-					<div class="alert alert-error">Invalid username and/or password.</div>
-				</div>
-				<div class="alert alert-success col-sm-12" data-ng-show="lvm.hasLoggedOut">
-					<div class="alert alert-success">You have been logged out.</div>
-				</div>
-				<form id="loginForm" name="loginForm" class="login-form" role="form"
-						action="/dashboard" method="post" novalidate="novalidate">
-					<div class="form-group login-form-group"
-							data-ng-class="{'has-warning': lvm.fieldHasWarning(loginForm.username),
-											'has-error': lvm.fieldHasError(loginForm.username)}">
-						<label class="sr-only" for="username">Username</label>
-						<div class="input-group">
-							<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-							<input id="username" type="text" class="form-control" name="username"
-									placeholder="Username" required="required"
-									data-ng-minlength="lvm.username.minlength"
-									maxlength="{{lvm.username.maxlength}}"
-									data-ng-maxlength="lvm.username.maxlength"
-									data-ng-pattern="lvm.alphanumericRegex"
-									data-ng-model="username" />
-							<span class="input-group-addon" data-ng-messages="loginForm.username.$error"
-									data-ng-show="lvm.showFieldMessages(loginForm.username)">
-								<i class="glyphicon glyphicon-remove" data-ng-message="required"
-										data-ng-show="loginForm.username.$dirty"></i>
-								<i class="glyphicon glyphicon-remove" data-ng-message="pattern"></i>
-								<i class="glyphicon glyphicon-warning-sign" data-ng-message="minlength"></i>
-							</span>
-						</div>
-						<p role="alert" class="help-block" data-ng-messages="loginForm.username.$error"
+			<div class="alert alert-success col-sm-12" data-ng-show="lvm.hasLoggedOut">
+				<div class="alert alert-success">You have been logged out.</div>
+			</div>
+			<form id="loginForm" name="loginForm" class="login-form" role="form"
+					action="/dashboard" method="post" novalidate="novalidate">
+				<div class="form-group login-form-group"
+						data-ng-class="{'has-warning': lvm.fieldHasWarning(loginForm.username),
+										'has-error': lvm.fieldHasError(loginForm.username)}">
+					<label class="sr-only" for="username">Username</label>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+						<input id="username" type="text" class="form-control" name="username"
+								placeholder="Username" required="required"
+								data-ng-minlength="lvm.username.minlength"
+								maxlength="{{lvm.username.maxlength}}"
+								data-ng-maxlength="lvm.username.maxlength"
+								data-ng-pattern="lvm.alphanumericRegex"
+								data-ng-model="username" />
+						<span class="input-group-addon" data-ng-messages="loginForm.username.$error"
 								data-ng-show="lvm.showFieldMessages(loginForm.username)">
-							<span class="help-block" data-ng-message="required" 
-									data-ng-show="loginForm.username.$dirty">
-								Username is required
-							</span>
-							<span class="help-block" data-ng-message="pattern">
-								Username allows alphanumeric characters only
-							</span>
-							<span class="help-block" data-ng-message="minlength">
-								Username must be at least 5 characters.
-							</span>
-							<span class="help-block" data-ng-message="maxlength">
-								Username must be less than 30 characters.
-							</span>
-						</p>
+							<i class="glyphicon glyphicon-remove" data-ng-message="required"
+									data-ng-show="loginForm.username.$dirty"></i>
+							<i class="glyphicon glyphicon-remove" data-ng-message="pattern"></i>
+							<i class="glyphicon glyphicon-warning-sign" data-ng-message="minlength"></i>
+						</span>
 					</div>
-					<div class="form-group login-form-group"
-							data-ng-class="{'has-warning': lvm.fieldHasWarning(loginForm.password),
-											'has-error': lvm.fieldHasError(loginForm.password)}">
-						<label class="sr-only" for="username">Password</label>
-						<div class="input-group">
-							<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-							<input id="password" type="password" class="form-control" name="password"
-									placeholder="Password" required="required"
-									data-ng-minlength="lvm.password.minlength"
-									maxlength="{{lvm.password.maxlength}}"
-									data-ng-maxlength="lvm.password.maxlength"
-									data-ng-pattern="lvm.alphanumericRegex"
-									data-ng-model="password" />
-							<span class="input-group-addon" data-ng-messages="loginForm.password.$error"
-									data-ng-show="lvm.showFieldMessages(loginForm.password)">
-								<i class="glyphicon glyphicon-remove" data-ng-message="required"
-										data-ng-show="loginForm.password.$dirty"></i>
-								<i class="glyphicon glyphicon-remove" data-ng-message="pattern"></i>
-								<i class="glyphicon glyphicon-warning-sign" data-ng-message="minlength"></i>
-							</span>
-						</div>
-						<p role="alert" class="help-block" data-ng-messages="loginForm.password.$error"
+					<p role="alert" class="help-block" data-ng-messages="loginForm.username.$error"
+							data-ng-show="lvm.showFieldMessages(loginForm.username)">
+						<span class="help-block" data-ng-message="required" 
+								data-ng-show="loginForm.username.$dirty">
+							Username is required
+						</span>
+						<span class="help-block" data-ng-message="pattern">
+							Username allows alphanumeric characters only
+						</span>
+						<span class="help-block" data-ng-message="minlength">
+							Username must be at least 5 characters.
+						</span>
+						<span class="help-block" data-ng-message="maxlength">
+							Username must be less than 30 characters.
+						</span>
+					</p>
+				</div>
+				<div class="form-group login-form-group"
+						data-ng-class="{'has-warning': lvm.fieldHasWarning(loginForm.password),
+										'has-error': lvm.fieldHasError(loginForm.password)}">
+					<label class="sr-only" for="username">Password</label>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+						<input id="password" type="password" class="form-control" name="password"
+								placeholder="Password" required="required"
+								data-ng-minlength="lvm.password.minlength"
+								maxlength="{{lvm.password.maxlength}}"
+								data-ng-maxlength="lvm.password.maxlength"
+								data-ng-pattern="lvm.alphanumericRegex"
+								data-ng-model="password" />
+						<span class="input-group-addon" data-ng-messages="loginForm.password.$error"
 								data-ng-show="lvm.showFieldMessages(loginForm.password)">
-							<span class="help-block" data-ng-message="required" 
-									data-ng-show="loginForm.password.$dirty">
-								Password is required
-							</span>
-							<span class="help-block" data-ng-message="pattern">
-								Password allows alphanumeric characters only
-							</span>
-							<span class="help-block" data-ng-message="minlength">
-								Password must be at least 6 characters.
-							</span>
-							<span class="help-block" data-ng-message="maxlength">
-								Password must be less than 30 characters.
-							</span>
-						</p>
+							<i class="glyphicon glyphicon-remove" data-ng-message="required"
+									data-ng-show="loginForm.password.$dirty"></i>
+							<i class="glyphicon glyphicon-remove" data-ng-message="pattern"></i>
+							<i class="glyphicon glyphicon-warning-sign" data-ng-message="minlength"></i>
+						</span>
 					</div>
-					<div class="checkbox">
-						<label>
-							<input id="remember" type="checkbox" name="remember" value="true"
-									data-ng-model="remember" /> Remember me
-						</label>
+					<p role="alert" class="help-block" data-ng-messages="loginForm.password.$error"
+							data-ng-show="lvm.showFieldMessages(loginForm.password)">
+						<span class="help-block" data-ng-message="required" 
+								data-ng-show="loginForm.password.$dirty">
+							Password is required
+						</span>
+						<span class="help-block" data-ng-message="pattern">
+							Password allows alphanumeric characters only
+						</span>
+						<span class="help-block" data-ng-message="minlength">
+							Password must be at least 6 characters.
+						</span>
+						<span class="help-block" data-ng-message="maxlength">
+							Password must be less than 30 characters.
+						</span>
+					</p>
+				</div>
+				<div class="checkbox">
+					<label>
+						<input id="remember" type="checkbox" name="remember" value="true"
+								data-ng-model="remember" /> Remember me
+					</label>
+				</div>
+				<button id="btn-login" type="submit" class="btn btn-primary"
+						data-ng-disabled="loginForm.$invalid">
+					Login
+				</button>
+				<div class="form-group">
+					<div class="horizontal-line">
+						Don't have an account?
+						<a href="#">
+							Sign Up Here
+						</a>
 					</div>
-					<button id="btn-login" type="submit" class="btn btn-primary"
-							data-ng-disabled="loginForm.$invalid">
-						Login
-					</button>
-					<div class="form-group">
-						<div class="horizontal-line">
-							Don't have an account?
-							<a href="#">
-								Sign Up Here
-							</a>
-						</div>
-					</div>
-				</form>
-			</div>
+				</div>
+			</form>
 		</div>
 	</div>
 </div>
